# python-poetry

./: .dockerignore  .flake8  .gitignore  LICENSE  README.md  generate.py  pyproject.toml
.github/workflows/: build-and-push-images.yml
3.8-slim/: Dockerfile
docker/3.10-alpine/: Dockerfile
docker/3.10-bullseye/: Dockerfile
docker/3.10-buster/: Dockerfile
docker/3.10-slim/: Dockerfile
docker/3.6.6-stretch/: Dockerfile
docker/3.7-bullseye/: Dockerfile
docker/3.7-slim/: Dockerfile
docker/3.7-stretch/: Dockerfile
docker/3.8-bullseye/: Dockerfile
docker/3.8-slim/: Dockerfile
docker/3.9-alpine/: Dockerfile
docker/3.9-bullseye/: Dockerfile
docker/3.9-buster/: Dockerfile
docker/3.9-slim/: Dockerfile
docker/alpine/3.10/: Dockerfile
docker/alpine/3.10.0/: Dockerfile
docker/alpine/3.10.1/: Dockerfile
docker/alpine/3.10.2/: Dockerfile
docker/alpine/3.10.3/: Dockerfile
docker/alpine/3.10.4/: Dockerfile
docker/alpine/3.10.5/: Dockerfile
docker/alpine/3.10.6/: Dockerfile
docker/alpine/3.10.7/: Dockerfile
docker/alpine/3.11/: Dockerfile
docker/alpine/3.11.0/: Dockerfile
docker/alpine/3.7/: Dockerfile
docker/alpine/3.7.12/: Dockerfile
docker/alpine/3.8/: Dockerfile
docker/alpine/3.8.12/: Dockerfile
docker/alpine/3.9.10/: Dockerfile
docker/alpine/3.9.11/: Dockerfile
docker/alpine/3.9.12/: Dockerfile
docker/alpine/3.9.13/: Dockerfile
docker/alpine/3.9.14/: Dockerfile
docker/alpine/3.9.15/: Dockerfile
docker/alpine/3.9.9/: Dockerfile
docker/slim/3.7/: Dockerfile
templates/: alpine.j2  bullseye.j2  buster.j2  slim.j2
(+123 files in other folders)
